--- a/pages/day13.html
+++ b/pages/day13.html
@@ -1,18 +1,251 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Día 13</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Día 13 – Core y suelo pélvico</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 13</h1>
+      <h1>Día 13 – Core y suelo pélvico</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 13 se añadirá más adelante.</p>
+      <!-- 1. Respiración de fuerza hacia arriba con papel -->
+      <section>
+        <h2>1. Respiración de fuerza hacia arriba con papel</h2>
+        <img
+          src="../img/day13/1.1.jpg"
+          alt="Respiración de fuerza hacia arriba con papel"
+        />
+        <p>
+          Colócate de pie con las piernas al ancho de los hombros y las manos en
+          la cintura. Mantén el abdomen firme, el pecho abierto y la mirada
+          dirigida hacia arriba. Toma un trozo de papel o tela ligera.
+        </p>
+        <p>
+          Inhala profundamente por la nariz llenando la parte baja del abdomen y
+          el diafragma. Al exhalar por la boca, expulsa el aire con máxima
+          fuerza hacia arriba intentando lanzar el papel verticalmente y
+          mantenerlo en el aire el mayor tiempo posible. El cuerpo no debe
+          colapsar: el pecho sigue abierto y el core permanece activo. Realiza
+          <strong>10 expulsiones fuertes</strong>, controlando cada inhalación
+          para evitar mareos.
+        </p>
+      </section>
+
+      <!-- 2. Uddiyana Bandha con bombeo abdominal en apnea -->
+      <section>
+        <h2>2. Uddiyana Bandha con bombeo abdominal en apnea</h2>
+        <img
+          src="../img/day13/2.1.jpg"
+          alt="Inicio de Uddiyana Bandha de pie con inclinación"
+        />
+        <img
+          src="../img/day13/2.2.jpg"
+          alt="Posición de vacío abdominal en Uddiyana Bandha"
+        />
+        <p>
+          Colócate de pie con los pies al ancho de los hombros e inclina
+          ligeramente el torso hacia adelante, apoyando las manos por encima de
+          las rodillas. Exhala todo el aire hasta vaciar completamente los
+          pulmones y realiza una apnea con los pulmones vacíos.
+        </p>
+        <p>
+          En esta apnea eleva el diafragma hacia arriba y mete el abdomen hacia
+          dentro creando un vacío profundo. Luego relaja el abdomen dejando que
+          salga hacia fuera, siempre sin tomar aire. Alterna este movimiento de
+          meter y soltar el abdomen varias veces dentro de la misma retención.
+          Cuando ya no puedas mantener la apnea, inhala suave y descansa unos
+          segundos. Cada retención cuenta como una repetición. Realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 3. Uddiyana Bandha lenta con retención prolongada -->
+      <section>
+        <h2>3. Uddiyana Bandha lenta con retención prolongada</h2>
+        <img
+          src="../img/day13/3.1.jpg"
+          alt="Posición inicial de Uddiyana Bandha lenta"
+        />
+        <img
+          src="../img/day13/3.2.jpg"
+          alt="Vacío abdominal mantenido en Uddiyana Bandha lenta"
+        />
+        <p>
+          De nuevo, coloca los pies al ancho de los hombros e inclina el torso
+          hacia adelante apoyando las manos por encima de las rodillas. Exhala
+          todo el aire hasta vaciar por completo los pulmones y realiza una
+          apnea.
+        </p>
+        <p>
+          Durante la apnea eleva el diafragma muy lentamente y mete el abdomen
+          hacia dentro de forma gradual, creando un vacío profundo y uniforme.
+          Mantén el vacío sin mover el abdomen, con un control total. La salida
+          también es lenta: primero relaja suavemente el abdomen y solo después
+          toma aire de manera tranquila. Realiza
+          <strong>10 repeticiones</strong>, manteniendo cada retención todo lo
+          que sea cómodo sin forzar.
+        </p>
+      </section>
+
+      <!-- 4. Respiración diafragmática con piernas elevadas y suelo pélvico -->
+      <section>
+        <h2>
+          4. Respiración diafragmática con piernas elevadas y contracción del
+          suelo pélvico
+        </h2>
+        <img
+          src="../img/day13/4.1.jpg"
+          alt="Respiración con piernas elevadas apoyadas en la pared"
+        />
+        <img
+          src="../img/day13/4.2.jpg"
+          alt="Variación de respiración diafragmática con piernas elevadas"
+        />
+        <p>
+          Túmbate boca arriba con la pelvis cerca de la pared y las piernas
+          estiradas hacia arriba, apoyadas en un ángulo de 60–90 grados. La zona
+          lumbar descansa en el suelo, los hombros están relajados y los brazos
+          a los lados del cuerpo.
+        </p>
+        <p>
+          Respira de forma deliberadamente lenta y tranquila. Al inhalar por la
+          nariz deja que el abdomen suba suavemente. Al exhalar por la boca haz
+          una exhalación más larga que la inhalación y crea una ligera sensación
+          de vacío interno: el abdomen se retrae hacia dentro y el diafragma
+          asciende, como una versión suave de Uddiyana Bandha pero
+          <strong>sin apnea</strong>.
+        </p>
+        <p>
+          En la parte final de cada exhalación añade la contracción del suelo
+          pélvico: contrae el esfínter y los músculos profundos como si
+          quisieras detener la orina o retener gases. Mantén esta contracción
+          durante toda la exhalación y 1–2 segundos más antes de soltarla. La
+          posición con las piernas elevadas mejora el retorno venoso desde las
+          piernas y concentra la circulación en la zona pélvica.
+        </p>
+        <p>
+          Esta combinación de respiración diafragmática lenta y contracciones
+          controladas del suelo pélvico produce un masaje interno suave útil
+          tanto para hombres como para mujeres. Para los hombres puede ayudar a
+          mantener y, en muchos casos, recuperar la función natural de la
+          próstata y la musculatura pélvica; para las mujeres contribuye a
+          tonificar el suelo pélvico, mejorar la sensibilidad y prevenir
+          problemas de incontinencia. Respira así durante
+          <strong>1–2 minutos</strong>.
+        </p>
+      </section>
+
+      <!-- 5. Elevación parcial del abdomen -->
+      <section>
+        <h2>5. Elevación parcial del abdomen</h2>
+        <img
+          src="../img/day13/5.1.jpg"
+          alt="Elevación parcial del abdomen en el punto alto"
+        />
+        <img
+          src="../img/day13/5.2.jpg"
+          alt="Posición baja de la elevación parcial del abdomen"
+        />
+        <p>
+          Acuéstate boca arriba con las rodillas flexionadas y los pies apoyados
+          en el suelo. Desliza las manos hacia las rodillas y eleva
+          ligeramente los hombros del suelo sin despegar la zona lumbar. El
+          movimiento es corto y muy controlado: se trata de “exprimir” el
+          abdomen desde abajo, no de incorporarse por completo.
+        </p>
+        <p>
+          En cada repetición exhala con fuerza al subir, apretando el abdomen, e
+          inhala al bajar sin permitir que los músculos se relajen del todo.
+          Mantén el core activo en todo momento. Realiza
+          <strong>3 series de 10 repeticiones</strong>, o bien
+          <strong>1 serie continua de 30 repeticiones</strong> si ya tienes
+          suficiente resistencia.
+        </p>
+        <p>
+          <strong>Variación avanzada:</strong> para aumentar la intensidad,
+          coloca los pies en una superficie elevada (banco, escalón, balón). Esto
+          incrementa la palanca y obliga al abdomen a trabajar con mayor
+          profundidad.
+        </p>
+      </section>
+
+      <!-- 6. Flexiones hacia adelante y regreso -->
+      <section>
+        <h2>6. Flexiones hacia adelante y regreso</h2>
+        <img
+          src="../img/day13/6.1.jpg"
+          alt="Inclinación hacia el suelo con piernas rectas"
+        />
+        <p>
+          Colócate de pie con los pies al ancho de los hombros y las piernas
+          completamente rectas. Desde esta posición inclina el torso hacia
+          adelante dejando que los brazos bajen hasta el suelo o hasta donde
+          llegues sin doblar las rodillas.
+        </p>
+        <p>
+          Siente el estiramiento en la parte posterior de las piernas y la zona
+          lumbar. Después vuelve a incorporarte de forma controlada, vértebra
+          por vértebra, sin prisas. Realiza
+          <strong>10 repeticiones</strong>, manteniendo siempre las piernas
+          rectas y la respiración tranquila.
+        </p>
+      </section>
+
+      <!-- 7. Estiramiento vertical en puntas con brazos elevados -->
+      <section>
+        <h2>7. Estiramiento vertical en puntas con brazos elevados</h2>
+        <img
+          src="../img/day13/7.1.jpg"
+          alt="Estiramiento vertical de pie en puntas con brazos arriba"
+        />
+        <p>
+          Colócate de pie con los brazos estirados directamente por encima de la
+          cabeza. Mantén los codos rectos y las manos juntas o paralelas, como
+          si quisieras tocar el techo.
+        </p>
+        <p>
+          Desde esta posición eleva los hombros hacia arriba creando un
+          estiramiento activo de toda la línea lateral del cuerpo y sube a las
+          puntas de los pies, ganando altura sin inclinarte hacia adelante ni
+          hacia atrás. Baja lentamente los talones al suelo manteniendo los
+          brazos arriba en todo momento y repite. Realiza
+          <strong>10 repeticiones</strong>, buscando cada vez un estiramiento un
+          poco mayor.
+        </p>
+      </section>
+
+      <!-- 8. Hiperextensión con elevación de piernas -->
+      <section>
+        <h2>8. Hiperextensión con elevación de piernas</h2>
+        <img
+          src="../img/day13/8.1.jpg"
+          alt="Hiperextensión en el suelo con elevación de piernas"
+        />
+        <p>
+          Acuéstate boca abajo con las piernas estiradas y los dedos de los pies
+          apuntando hacia atrás. Coloca las manos detrás de la cabeza sin tirar
+          del cuello.
+        </p>
+        <p>
+          Desde esta posición eleva simultáneamente el pecho y las piernas,
+          creando una contracción completa de toda la cadena posterior: zona
+          lumbar, glúteos y músculos de la espalda. El abdomen permanece
+          ligeramente activado para estabilizar la postura.
+        </p>
+        <p>
+          Una vez arriba, mantén la posición durante
+          <strong>10 segundos</strong>, respirando con control sin dejar que el
+          cuerpo caiga ni que la zona lumbar se arquee en exceso. Después
+          desciende lentamente hasta tocar el suelo. Realiza
+          <strong>10 repeticiones</strong>, manteniendo siempre la forma correcta
+          y la elevación tanto del torso como de las piernas.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
