--- a/pages/day14.html
+++ b/pages/day14.html
@@ -1,18 +1,384 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Día 14</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Día 14 – Piernas y resistencia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 14</h1>
+      <h1>Día 14 – Piernas y resistencia</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 14 se añadirá más adelante.</p>
+      <!-- 1. Extensión isométrica de pierna hacia atrás para glúteo -->
+      <section>
+        <h2>1. Extensión isométrica de pierna hacia atrás para glúteo</h2>
+        <img
+          src="../img/day14/1.1.jpg"
+          alt="Extensión de pierna hacia atrás manteniendo el cuerpo recto"
+        />
+        <p>
+          Ponte de pie con la espalda completamente recta y las manos apoyadas
+          en la zona lumbar o en las caderas. Desde esta posición lleva una
+          pierna recta hacia atrás sin inclinar el torso hacia adelante. La
+          tensión principal debe concentrarse en el glúteo de la pierna que
+          trabaja, no en la zona lumbar.
+        </p>
+        <p>
+          Mantén la pierna elevada y el glúteo apretado durante
+          <strong>10&nbsp;segundos</strong> en cada repetición. Cambia de pierna
+          y repite el mismo patrón. Realiza
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 2. Zancadas con pausa isométrica -->
+      <section>
+        <h2>2. Zancadas con pausa isométrica</h2>
+        <img
+          src="../img/day14/2.1.jpg"
+          alt="Zancada profunda con rodilla casi tocando el suelo"
+        />
+        <p>
+          Da un paso amplio hacia adelante y baja a una zancada profunda,
+          llevando la rodilla trasera casi hasta el suelo. El torso permanece
+          vertical y la rodilla delantera mira estrictamente hacia adelante, sin
+          colapsar hacia dentro.
+        </p>
+        <p>
+          En la posición baja congela el movimiento y mantén una tensión fuerte
+          durante <strong>10&nbsp;segundos</strong>. Después sube con control,
+          cambia de pierna y repite. Realiza
+          <strong>10 repeticiones por cada lado</strong>, manteniendo
+          <strong>10&nbsp;segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 3. Elevación isométrica de pierna recta hacia adelante -->
+      <section>
+        <h2>3. Elevación isométrica de pierna recta hacia adelante</h2>
+        <img
+          src="../img/day14/3.1.jpg"
+          alt="Elevación de una pierna recta hacia adelante formando un ángulo de 90 grados"
+        />
+        <p>
+          Ponte de pie con el torso recto y el abdomen firme. Levanta una pierna
+          completamente recta hacia adelante intentando llevarla hasta
+          90&nbsp;grados con respecto al torso o hasta donde tu movilidad lo
+          permita. Evita inclinarte hacia atrás o hacia adelante.
+        </p>
+        <p>
+          En la posición más alta mantén la pierna en el aire durante
+          <strong>10&nbsp;segundos</strong> antes de bajarla con control. Cambia
+          de lado y repite. Realiza
+          <strong>10 repeticiones por cada pierna</strong>, manteniendo
+          <strong>10&nbsp;segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 4. Isometría de elevación de rodilla hacia el pecho -->
+      <section>
+        <h2>4. Isometría de elevación de rodilla hacia el pecho</h2>
+        <img
+          src="../img/day14/4.1.jpg"
+          alt="Elevación de rodilla hacia el pecho sujetando la pierna con ambas manos"
+        />
+        <p>
+          Ponte de pie con el torso recto. Levanta una rodilla hacia el pecho y
+          sujétala con ambas manos creando un bloqueo firme. Desde esta posición
+          intenta elevar la pierna aún más, mientras las manos impiden el
+          movimiento. La tensión debe sentirse en el glúteo y en la parte
+          posterior del muslo.
+        </p>
+        <p>
+          Mantén la contracción durante
+          <strong>10&nbsp;segundos</strong> en cada repetición y luego cambia de
+          pierna. Realiza <strong>10 repeticiones por cada lado</strong>,
+          manteniendo <strong>10&nbsp;segundos</strong> en cada una.
+        </p>
+      </section>
+
+      <!-- 5. Subidas al banco -->
+      <section>
+        <h2>5. Subidas al banco</h2>
+        <img
+          src="../img/day14/5.1.jpg"
+          alt="Subida al banco elevando la rodilla como si fuera un escalón"
+        />
+        <p>
+          Colócate frente a un banco o taburete estable. Apoya un pie en la
+          superficie elevada y, empujando con esa pierna, sube el cuerpo como si
+          subieras un escalón, elevando la rodilla de la pierna libre hacia
+          arriba. Mantén el torso recto y el abdomen firme.
+        </p>
+        <p>
+          Baja con control hasta la posición inicial y cambia de pierna en cada
+          repetición o después de completar la serie. Realiza
+          <strong>10 repeticiones por pierna</strong>.
+        </p>
+      </section>
+
+      <!-- 6. Sentadilla estilo “pistola” sobre el banco -->
+      <section>
+        <h2>6. Sentadilla estilo “pistola” sobre el banco</h2>
+        <img
+          src="../img/day14/6.1.jpg"
+          alt="Sentadilla sobre un pie apoyado en el banco con la otra pierna libre"
+        />
+        <p>
+          Apoya un pie sobre el banco y mantén la otra pierna libre, sin tocar
+          el suelo. Desde esta posición desciende doblando la rodilla de la
+          pierna de apoyo y llevando la cadera hacia atrás y abajo, como en una
+          sentadilla tipo “pistola”. El torso permanece recto y la rodilla se
+          mantiene alineada hacia adelante.
+        </p>
+        <p>
+          Desciende hasta el punto en el que puedas mantener el control y luego
+          sube de nuevo sin perder el equilibrio. Realiza
+          <strong>10 repeticiones por cada pierna</strong>.
+        </p>
+      </section>
+
+      <!-- 7. Sentadillas profundas con hundimiento adicional (serie principal) -->
+      <section>
+        <h2>7. Sentadillas profundas con hundimiento adicional</h2>
+        <img
+          src="../img/day14/7.1.jpg"
+          alt="Sentadilla profunda en posición de trabajo"
+        />
+        <img
+          src="../img/day14/7.2.jpg"
+          alt="Hundimiento adicional en la sentadilla profunda"
+        />
+        <img
+          src="../img/day14/7.3.jpg"
+          alt="Regreso a la posición de trabajo en sentadilla"
+        />
+        <p>
+          Coloca los pies un poco más anchos que los hombros, con las puntas
+          ligeramente hacia afuera. Desde la posición de pie baja a una
+          sentadilla profunda hasta tu nivel de trabajo y mantén la postura
+          durante <strong>10&nbsp;segundos</strong>, con el pecho abierto y la
+          espalda recta.
+        </p>
+        <p>
+          Sin levantarte de la sentadilla, hunde la cadera un poco más abajo
+          durante unos segundos, solo lo suficiente para aumentar la carga, y
+          luego vuelve de nuevo al mismo nivel de trabajo. En esta posición
+          vuelve a mantener <strong>10&nbsp;segundos</strong> antes de subir por
+          completo. Este ciclo cuenta como <strong>1 repetición</strong>.
+        </p>
+        <p>Realiza <strong>10 repeticiones en total</strong>.</p>
+      </section>
+
+      <!-- 8. Saltos en estrella -->
+      <section>
+        <h2>8. Saltos en estrella</h2>
+        <img
+          src="../img/day14/8.1.jpg"
+          alt="Salto en estrella abriendo brazos y piernas"
+        />
+        <p>
+          Desde la posición de pie salta abriendo brazos y piernas hacia fuera,
+          formando una “estrella” en el aire, y vuelve a la posición inicial con
+          control. Mantén el torso firme y aterriza con las rodillas ligeramente
+          flexionadas para absorber el impacto.
+        </p>
+        <p>Realiza <strong>10 repeticiones</strong>.</p>
+      </section>
+
+      <!-- 9. Burpee sin flexión -->
+      <section>
+        <h2>9. Burpee sin flexión</h2>
+        <img
+          src="../img/day14/9.1.jpg"
+          alt="Inicio del burpee agachándose para apoyar las manos en el suelo"
+        />
+        <img
+          src="../img/day14/9.2.jpg"
+          alt="Posición de plancha en el burpee sin flexión"
+        />
+        <img
+          src="../img/day14/9.3.jpg"
+          alt="Salto vertical al final del burpee"
+        />
+        <p>
+          Desde la posición de pie inclínate y coloca las manos en el suelo.
+          Lanza las piernas hacia atrás entrando en posición de plancha. Vuelve
+          a recoger las piernas hacia el pecho con un salto corto y, desde ahí,
+          realiza un salto vertical con el cuerpo extendido.
+        </p>
+        <p>
+          Realiza <strong>10 repeticiones</strong>, manteniendo un ritmo
+          constante y aterrizando de forma controlada.
+        </p>
+      </section>
+
+      <!-- 10. Saltos en posición de plancha -->
+      <section>
+        <h2>10. Saltos en posición de plancha</h2>
+        <img
+          src="../img/day14/10.1.jpg"
+          alt="Posición de plancha antes del salto con las piernas"
+        />
+        <img
+          src="../img/day14/10.2.jpg"
+          alt="Salto llevando las rodillas hacia el pecho desde la plancha"
+        />
+        <p>
+          Colócate en posición de plancha con los brazos extendidos y el abdomen
+          firme. Desde ahí salta con ambos pies hacia adelante, acercando las
+          rodillas al pecho, y luego salta de nuevo hacia atrás para volver a la
+          plancha. Mantén la cadera estable y evita que la zona lumbar se hunda.
+        </p>
+        <p>
+          Realiza <strong>10 repeticiones</strong> con un ritmo elástico y
+          continuo.
+        </p>
+      </section>
+
+      <!-- 11. Sentadillas profundas adicionales con hundimiento -->
+      <section>
+        <h2>11. Sentadillas profundas adicionales con hundimiento</h2>
+        <img
+          src="../img/day14/11.1.jpg"
+          alt="Sentadilla profunda adicional en posición de trabajo"
+        />
+        <img
+          src="../img/day14/11.2.jpg"
+          alt="Hundimiento extra en la sentadilla adicional"
+        />
+        <img
+          src="../img/day14/11.3.jpg"
+          alt="Regreso a la posición de trabajo en la sentadilla adicional"
+        />
+        <p>
+          Repite el mismo patrón de sentadilla profunda con hundimiento
+          adicional: mantén la posición de trabajo durante
+          <strong>10&nbsp;segundos</strong>, baja un poco más durante unos
+          segundos y vuelve al nivel de trabajo para sostener otros
+          <strong>10&nbsp;segundos</strong> antes de subir.
+        </p>
+        <p>
+          Esta serie es más corta que la principal. Realiza
+          <strong>3–5 repeticiones</strong>, según tu nivel de fatiga.
+        </p>
+      </section>
+
+      <!-- 12. Saltos en estrella suaves -->
+      <section>
+        <h2>12. Saltos en estrella suaves</h2>
+        <img
+          src="../img/day14/12.1.jpg"
+          alt="Salto en estrella ligero con brazos y piernas abiertos"
+        />
+        <p>
+          Realiza unos pocos saltos en estrella para movilizar las piernas y
+          mantener el ritmo de trabajo antes de continuar. No es una serie
+          principal, sino un breve bloque de activación.
+        </p>
+        <p>Haz <strong>5–10 saltos</strong> de forma ligera.</p>
+      </section>
+
+      <!-- 13. Sentadillas profundas de refuerzo -->
+      <section>
+        <h2>13. Sentadillas profundas de refuerzo</h2>
+        <img
+          src="../img/day14/13.1.jpg"
+          alt="Sentadilla profunda de refuerzo en posición de trabajo"
+        />
+        <img
+          src="../img/day14/13.2.jpg"
+          alt="Hundimiento en la sentadilla de refuerzo"
+        />
+        <img
+          src="../img/day14/13.3.jpg"
+          alt="Regreso a la posición de trabajo en la sentadilla de refuerzo"
+        />
+        <p>
+          De nuevo, realiza sentadillas profundas con el mismo esquema de
+          trabajo: 10&nbsp;segundos en la posición de sentadilla, hundimiento
+          adicional durante unos segundos y otros
+          <strong>10&nbsp;segundos</strong> en la posición de trabajo antes de
+          subir.
+        </p>
+        <p>
+          Esta serie también es corta. Completa
+          <strong>3–5 repeticiones</strong> manteniendo la técnica limpia.
+        </p>
+      </section>
+
+      <!-- 14. Subidas al banco (repetición) -->
+      <section>
+        <h2>14. Subidas al banco</h2>
+        <img
+          src="../img/day14/14.1.jpg"
+          alt="Nueva serie de subidas al banco"
+        />
+        <p>
+          Repite el ejercicio de subidas al banco: apoya un pie en la superficie
+          elevada y sube el cuerpo elevando la rodilla de la pierna libre como
+          si subieras un escalón. Mantén el torso estable y el apoyo firme.
+        </p>
+        <p>Realiza de nuevo <strong>10 repeticiones por pierna</strong>.</p>
+      </section>
+
+      <!-- 15. Burpee sin flexión (serie corta) -->
+      <section>
+        <h2>15. Burpee sin flexión</h2>
+        <img
+          src="../img/day14/15.1.jpg"
+          alt="Inicio del burpee corto apoyando las manos en el suelo"
+        />
+        <img
+          src="../img/day14/15.2.jpg"
+          alt="Posición de plancha en la serie corta de burpees"
+        />
+        <img
+          src="../img/day14/15.3.jpg"
+          alt="Salto vertical en la serie corta de burpees"
+        />
+        <p>
+          Realiza una serie corta de burpees sin flexión: desde la posición de
+          pie baja a apoyar las manos en el suelo, lanza las piernas hacia atrás
+          a la plancha, recoge las piernas y ejecuta un pequeño salto vertical.
+        </p>
+        <p>
+          Esta vez haz solo <strong>5 repeticiones</strong>, como bloque breve
+          antes del trabajo final de sentadillas.
+        </p>
+      </section>
+
+      <!-- 16. Sentadillas profundas finales -->
+      <section>
+        <h2>16. Sentadillas profundas finales</h2>
+        <img
+          src="../img/day14/16.1.jpg"
+          alt="Sentadilla profunda final en posición de trabajo"
+        />
+        <img
+          src="../img/day14/16.2.jpg"
+          alt="Hundimiento adicional en la sentadilla final"
+        />
+        <img
+          src="../img/day14/16.3.jpg"
+          alt="Regreso a la posición de trabajo en la sentadilla final"
+        />
+        <p>
+          Termina el día con una última serie de sentadillas profundas usando el
+          mismo esquema: 10&nbsp;segundos en la posición de trabajo, hundimiento
+          un poco más abajo durante unos segundos y otros
+          <strong>10&nbsp;segundos</strong> en la sentadilla de trabajo antes de
+          subir completamente.
+        </p>
+        <p>
+          Realiza <strong>3–5 repeticiones</strong>, buscando un trabajo intenso
+          pero controlado para cerrar la sesión de piernas.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
