--- a/pages/day08.html
+++ b/pages/day08.html
@@ -124,18 +124,23 @@
 
       <!-- 6. Isometría de inclinación lateral del cuello -->
       <section>
-        <h2>6. Isometría de inclinación lateral del cuello</h2>
+        <h2>
+          6. Isometría de inclinación lateral del cuello con resistencia en
+          sentido contrario
+        </h2>
         <img
           src="../img/day08/6.1.jpg"
           alt="Isometría de inclinación lateral del cuello"
         />
         <p>
-          Inclina ligeramente la cabeza hacia un lado y coloca la palma en la
-          parte lateral-superior de la cabeza. Intenta inclinar la cabeza aún
-          más hacia ese mismo lado mientras la mano lo impide por completo. No
-          debe haber desplazamiento visible. Mantén una respiración tranquila,
-          sostén la tensión durante 10 segundos y realiza 10 repeticiones por
-          cada lado.
+          Coloca la palma en la parte lateral-superior de la cabeza. La mano
+          “quiere” llevar la cabeza hacia su propio hombro, y tú haces lo
+          contrario: intentas alejar la cabeza, como si quisieras llevar la
+          oreja hacia el hombro opuesto. No debe haber movimiento visible: la
+          mano y la cabeza se anulan y toda la tensión queda dentro de los
+          músculos. Mantén los hombros relajados y siente cómo trabaja sobre
+          todo el lado del cuello opuesto a la mano. Sostén la contracción
+          durante 10 segundos y realiza 10 repeticiones por cada lado.
         </p>
       </section>
 
