--- a/pages/day08.html
+++ b/pages/day08.html
@@ -15,7 +15,9 @@
     <main>
       <!-- 1. Extensión profunda de cuello y mandíbula desde rodillas -->
       <section>
-        <h2>1. Extensión profunda de cuello y mandíbula desde rodillas</h2>
+        <h2>
+          1. Extensión isométrica con apoyo en las manos y apertura de la boca
+        </h2>
         <img
           src="../img/day08/1.1.jpg"
           alt="Extensión con apoyo en los dedos de los pies"
@@ -29,15 +31,12 @@
           alt="Extensión con empeines apoyados en el suelo"
         />
         <p>
-          Arrodíllate y siéntate sobre los pies. Si la movilidad aún no es
-          suficiente, puedes mantener los dedos de los pies apoyados en el
-          suelo; la forma ideal es con los empeines completamente apoyados.
-          Desde ahí reclina el torso hacia atrás y apoya las manos en los
-          talones. Lleva la cabeza al máximo hacia atrás, abre la boca tan
-          ampliamente como puedas y luego ciérrala lentamente con la misma
-          tensión. Después inclina la cabeza hacia adelante y mantén la barbilla
-          pegada al pecho durante 10 tiempos. Vuelve a la posición inicial y
-          repite el ciclo durante 10 repeticiones.
+          Ponte de rodillas y siéntate sobre los talones. Agarra los talones con
+          las manos. Lleva el pecho hacia arriba y la cabeza hacia atrás (sin
+          tirones). En esa posición: abre la boca al máximo y ciérrala
+          lentamente (como con resistencia). Haz 10 veces abrir/cerrar. Vuelve
+          despacio hacia adelante y pega la barbilla al pecho. Mantén 10 conteos
+          (~10 s). Eso es 1 repetición. Haz 10 repeticiones.
         </p>
       </section>
 
